<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_postcode_key">pref_postcode</string>
    <string name="pref_country_key">pref_city</string>
    <string name="pref_units_key">pref_units</string>

    <string name="pref_postcode_title">Location</string>
    <string name="pref_units_title">Units</string>
    <string name="pref_country_title">Country</string>
    
    <string name="pref_postcode_default" translatable="false">14055</string>
    <string name="pref_country_default">de</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>
    <string name="menu_item_share">Share</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <!-- these 'xliff' tags indicate that the value should not be translated? -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g>%%</string>
    <string name="format_wind">Wind speed: <xliff:g id="wind">%1$s%2$s %3$s</xliff:g></string>
    <string name="format_pressure">Atmospheric pressure: <xliff:g id="pressure">%1$s%2$s</xliff:g></string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <string name="pref_last_notification">last_notification</string>

    <string name="meters_per_second">m/s</string>
    <string name="miles_per_hour">mph</string>
    <string name="hectopascals">hPa</string>


</resources>
