<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/pref_postcode_key"
        android:title="@string/pref_postcode_title"
        android:defaultValue="@string/pref_postcode_default"
        android:inputType="number"
        android:singleLine="true"
        />

    <ListPreference
        android:key="@string/pref_country_key"
        android:title="@string/pref_country_title"
        android:defaultValue="@string/pref_country_default"
        android:entries="@array/pref_country_entries"
        android:entryValues="@array/pref_country_values"
        />

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"/>
</PreferenceScreen>